logs/django-devserver.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/devserver'...
Listing './lib/python3.5/site-packages/devserver/management'...
Listing './lib/python3.5/site-packages/devserver/management/commands'...
Compiling './lib/python3.5/site-packages/devserver/management/commands/runserver.py'...
***   File "./lib/python3.5/site-packages/devserver/management/commands/runserver.py", line 29
    raise exc_type, exc_value, tb
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/devserver/models.py'...
***   File "./lib/python3.5/site-packages/devserver/models.py", line 20
    raise exceptions.ImproperlyConfigured, '%s isn\'t a devserver module' % path
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/devserver/modules'...
Compiling './lib/python3.5/site-packages/devserver/testcases.py'...
***   File "./lib/python3.5/site-packages/devserver/testcases.py", line 78
    except wsgi_server_exc_cls, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/devserver/utils'...
Listing './lib/python3.5/site-packages/django_devserver-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
